@@ -1,3 +1,9 @@
+2010-06-16  Gautier Portet <kassoulet gmail com>
+
+	* src/soundconverter.py: Fix progress bar oddities, crash in TaskQueue and
+	  duplicate mp3 entry in desktop file.
+	  (Thanks Michael, closes #17269, #17268 and #17266)
+
 2010-06-13  Gautier Portet <kassoulet gmail com>
 
 	* src/soundconverter.py: Fix typo preventing SoundConverter to run.
